--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,10 +1,17 @@
 @font-face {
-  font-family: 'garamond-premier-pro-light-display';
-  src: local('garamond-premier-pro-light-display'), url(./fonts/Garamond-Premier-Pro-Light-Display.otf) format('otf');
+  font-family: "garamond-premier-pro-light-display";
+  src: local("garamond-premier-pro-light-display"),
+    url(./fonts/Garamond-Premier-Pro-Light-Display.otf) format("otf");
 }
 
+@font-face {
+  font-family: "garamond-premier-pro-light-italic-display";
+  src: local("garamond-premier-pro-light-italic-display"),
+    url(./fonts/Garamond-Premier-Pro-Light-Italic-Display.otf) format("otf");
+}
 
 @font-face {
-  font-family: 'garamond-premier-pro-light-italic-display';
-  src: local('garamond-premier-pro-light-italic-display'), url(./fonts/Garamond-Premier-Pro-Light-Italic-Display.otf) format('otf');
+  font-family: "HelveticaNeue-Light";
+  src: local("HelveticaNeue-Light"),
+    url(./fonts/HelveticaNeue-Light.otf) format("otf");
 }
