--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import "./css/index.css";
+
 span.body-text-wrapper p {
   font-family: sans-serif;
   line-height: 1.55;
@@ -30,8 +32,10 @@ span.body-text-wrapper p {
 * {
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
   font-weight: lighter;
-  font-family: "Indie Flower";
+  letter-spacing: 1px;
+  font-family: "HelveticaNeue-Light";
 }
 .wrapper-main {
   padding-top: 70px;
@@ -57,6 +61,10 @@ span.body-text-wrapper p {
   box-sizing: border-box;
   overflow: hidden;
 }
+.reverse {
+  flex-wrap: wrap-reverse;
+}
+
 .bottom-line {
   width: 80%;
   margin: 0px;
@@ -70,7 +78,6 @@ span.body-text-wrapper p {
   text-align: justify;
   margin: 10px;
   padding: 10px;
-  box-sizing: border-box;
   overflow: hidden;
   text-justify: inter-word;
 }
@@ -161,4 +168,16 @@ button:active {
     flex: 100%;
     max-width: 100%;
   }
+}
+
+.btn-default {
+  padding: 30px;
+  margin-top: 25px;
+  margin-bottom: 20px;
+  box-shadow: 5px 5px 10px;
+}
+.btn-default:active {
+  background-color: ghostwhite;
+  transform: scale(0.96);
+  box-shadow: 0px 0px 0px;
 }
